--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     },
     "dependencies": {
         "@popperjs/core": "^2.11.8",
+        "alpinejs": "^3.12.1",
         "bootstrap": "^5.3.0-alpha3",
+        "jquery": "^3.7.0",
         "yarn": "^1.22.19"
     }
 }
